--- a/address-book.html
+++ b/address-book.html
@@ -11,7 +11,7 @@
     <link rel="preload" href="fonts/webfont/OpenSans-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="fonts/webfont/OpenSans-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="fonts/webfont/OpenSans-Italic.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" href="fonts/icons/fonts/icomoon.woff" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/icons/fonts/icomoon.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <!-- Import CSS files -->
     <link rel="stylesheet" href="style-resets.css">
     <link rel="stylesheet" href="styles.css">
@@ -60,104 +60,96 @@
             <h5 class="account-name">Demo account</h5>
             <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
             <div>
-              <p>Free: <span>0.0000 C</span></p>
-              <p>Staked: <span>0.0000 C</span></p>
+              <p>Network: <span>Polkadot</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Remove</button>
-              <button>Edit</button>
-            </div>
-          </div>
-          <div class="account-list-item">
-            <h5 class="account-name">Demo account</h5>
-            <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-            <div>
-              <p>Free: <span>0.0000 C</span></p>
-              <p>Staked: <span>0.0000 C</span></p>
-            </div>
-            <div>
-              <button>Copy</button>
-              <button>Remove</button>
-              <button>Edit</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-tertiary"><span class="icon-trash"></span> Remove</button>
+              <button class="button-secondary"><span class="icon-edit"></span> Edit</button>
             </div>
           </div>
           <div class="account-list-item">
             <h5 class="account-name">Demo account</h5>
             <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
             <div>
-              <p>Free: <span>0.0000 C</span></p>
-              <p>Staked: <span>0.0000 C</span></p>
+              <p>Network: <span>Polkadot</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Remove</button>
-              <button>Edit</button>
-            </div>
-          </div>
-          <div class="account-list-item">
-            <h5 class="account-name">Demo account</h5>
-            <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-            <div>
-              <p>Free: <span>0.0000 C</span></p>
-              <p>Staked: <span>0.0000 C</span></p>
-            </div>
-            <div>
-              <button>Copy</button>
-              <button>Remove</button>
-              <button>Edit</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-tertiary"><span class="icon-trash"></span> Remove</button>
+              <button class="button-secondary"><span class="icon-edit"></span> Edit</button>
             </div>
           </div>
           <div class="account-list-item">
             <h5 class="account-name">Demo account</h5>
             <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
             <div>
-              <p>Free: <span>0.0000 C</span></p>
-              <p>Staked: <span>0.0000 C</span></p>
+              <p>Network: <span>Polkadot</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Remove</button>
-              <button>Edit</button>
-            </div>
-          </div>
-          <div class="account-list-item">
-            <h5 class="account-name">Demo account</h5>
-            <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-            <div>
-              <p>Free: <span>0.0000 C</span></p>
-              <p>Staked: <span>0.0000 C</span></p>
-            </div>
-            <div>
-              <button>Copy</button>
-              <button>Remove</button>
-              <button>Edit</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-tertiary"><span class="icon-trash"></span> Remove</button>
+              <button class="button-secondary"><span class="icon-edit"></span> Edit</button>
             </div>
           </div>
           <div class="account-list-item">
             <h5 class="account-name">Demo account</h5>
             <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
             <div>
-              <p>Free: <span>0.0000 C</span></p>
-              <p>Staked: <span>0.0000 C</span></p>
+              <p>Network: <span>Polkadot</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Remove</button>
-              <button>Edit</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-tertiary"><span class="icon-trash"></span> Remove</button>
+              <button class="button-secondary"><span class="icon-edit"></span> Edit</button>
             </div>
           </div>
           <div class="account-list-item">
             <h5 class="account-name">Demo account</h5>
             <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
             <div>
-              <p>Free: <span>0.0000 C</span></p>
-              <p>Staked: <span>0.0000 C</span></p>
+              <p>Network: <span>Polkadot</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Remove</button>
-              <button>Edit</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-tertiary"><span class="icon-trash"></span> Remove</button>
+              <button class="button-secondary"><span class="icon-edit"></span> Edit</button>
+            </div>
+          </div>
+          <div class="account-list-item">
+            <h5 class="account-name">Demo account</h5>
+            <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+            <div>
+              <p>Network: <span>Polkadot</span></p>
+            </div>
+            <div>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-tertiary"><span class="icon-trash"></span> Remove</button>
+              <button class="button-secondary"><span class="icon-edit"></span> Edit</button>
+            </div>
+          </div>
+          <div class="account-list-item">
+            <h5 class="account-name">Demo account</h5>
+            <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+            <div>
+              <p>Network: <span>Polkadot</span></p>
+            </div>
+            <div>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-tertiary"><span class="icon-trash"></span> Remove</button>
+              <button class="button-secondary"><span class="icon-edit"></span> Edit</button>
+            </div>
+          </div>
+          <div class="account-list-item">
+            <h5 class="account-name">Demo account</h5>
+            <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+            <div>
+              <p>Network: <span>Polkadot</span></p>
+            </div>
+            <div>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-tertiary"><span class="icon-trash"></span> Remove</button>
+              <button class="button-secondary"><span class="icon-edit"></span> Edit</button>
             </div>
           </div>
         </div>
