--- a/accounts.html
+++ b/accounts.html
@@ -11,7 +11,7 @@
   <link rel="preload" href="fonts/webfont/OpenSans-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="fonts/webfont/OpenSans-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="fonts/webfont/OpenSans-Italic.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="fonts/icons/fonts/icomoon.woff" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="fonts/icons/fonts/icomoon.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <!-- Import CSS files -->
   <link rel="stylesheet" href="style-resets.css">
   <link rel="stylesheet" href="styles.css">
@@ -51,6 +51,7 @@
       <div class="page-header">
         <div class="header-container pagewidth">
           <h2>All your wallet addresses</h2>
+          <button class="hidden button-primary" aria-hidden="true">Hidden Button</button>
         </div>
       </div>
       <div class="content pagewidth has-scroll">
@@ -63,8 +64,8 @@
               <p>Staked: <span>0.0000 C</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Send</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-secondary"><span class="icon-send"></span> Send</button>
             </div>
           </div>
           <div class="account-list-item">
@@ -75,8 +76,8 @@
               <p>Staked: <span>0.0000 C</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Send</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-secondary"><span class="icon-send"></span> Send</button>
             </div>
           </div>
           <div class="account-list-item">
@@ -87,8 +88,8 @@
               <p>Staked: <span>0.0000 C</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Send</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-secondary"><span class="icon-send"></span> Send</button>
             </div>
           </div>
           <div class="account-list-item">
@@ -99,8 +100,8 @@
               <p>Staked: <span>0.0000 C</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Send</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-secondary"><span class="icon-send"></span> Send</button>
             </div>
           </div>
           <div class="account-list-item">
@@ -111,8 +112,8 @@
               <p>Staked: <span>0.0000 C</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Send</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-secondary"><span class="icon-send"></span> Send</button>
             </div>
           </div>
           <div class="account-list-item">
@@ -123,8 +124,8 @@
               <p>Staked: <span>0.0000 C</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Send</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-secondary"><span class="icon-send"></span> Send</button>
             </div>
           </div>
           <div class="account-list-item">
@@ -135,8 +136,8 @@
               <p>Staked: <span>0.0000 C</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Send</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-secondary"><span class="icon-send"></span> Send</button>
             </div>
           </div>
           <div class="account-list-item">
@@ -147,8 +148,8 @@
               <p>Staked: <span>0.0000 C</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Send</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-secondary"><span class="icon-send"></span> Send</button>
             </div>
           </div>
           <div class="account-list-item">
@@ -159,8 +160,8 @@
               <p>Staked: <span>0.0000 C</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Send</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-secondary"><span class="icon-send"></span> Send</button>
             </div>
           </div>
           <div class="account-list-item">
@@ -171,8 +172,8 @@
               <p>Staked: <span>0.0000 C</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Send</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-secondary"><span class="icon-send"></span> Send</button>
             </div>
           </div>
           <div class="account-list-item">
@@ -183,8 +184,8 @@
               <p>Staked: <span>0.0000 C</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Send</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-secondary"><span class="icon-send"></span> Send</button>
             </div>
           </div>
           <div class="account-list-item">
@@ -195,8 +196,8 @@
               <p>Staked: <span>0.0000 C</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Send</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-secondary"><span class="icon-send"></span> Send</button>
             </div>
           </div>
           <div class="account-list-item">
@@ -207,8 +208,8 @@
               <p>Staked: <span>0.0000 C</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Send</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-secondary"><span class="icon-send"></span> Send</button>
             </div>
           </div>
           <div class="account-list-item">
@@ -219,8 +220,8 @@
               <p>Staked: <span>0.0000 C</span></p>
             </div>
             <div>
-              <button>Copy</button>
-              <button>Send</button>
+              <button class="button-tertiary"><span class="icon-copy"></span> Copy</button>
+              <button class="button-secondary"><span class="icon-send"></span> Send</button>
             </div>
           </div>
         </div>
