--- a/new-multisig.html
+++ b/new-multisig.html
@@ -11,7 +11,7 @@
     <link rel="preload" href="fonts/webfont/OpenSans-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="fonts/webfont/OpenSans-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="fonts/webfont/OpenSans-Italic.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" href="fonts/icons/fonts/icomoon.woff" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/icons/fonts/icomoon.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <!-- Import CSS files -->
     <link rel="stylesheet" href="style-resets.css">
     <link rel="stylesheet" href="styles.css">
@@ -105,7 +105,20 @@
           </div>
           <div class="side-item">
             <h3>Selected signatories (0)</h3>
-            <div class="side-item-content scrollable"></div>
+            <div class="side-item-content scrollable">
+              <div class="multisig-account">
+                <h5>Demo Account</h5>
+                <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+              </div>
+              <div class="multisig-account">
+                <h5>Test Account 1</h5>
+                <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+              </div>
+              <div class="multisig-account">
+                <h5>Test Account 2</h5>
+                <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
